# search_engine

./: .gitignore  CMakeLists.txt  config.json  mainwindow.ui  requests.json
Tests/: CMakeLists.txt  test.cpp  tests.cpp
include/: converterJSON.h  invertedIndex.h  jsonConverter.h  mainwindow.h  requesteditor.h  searchServer.h  threadPool.h
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  jsonConverter.cpp  main.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.ui  requesteditor.cpp  requesteditor.ui  searchServer.cpp  threadPool.cpp
